Fix author name

--- a/package.yaml
+++ b/package.yaml
@@ -1,10 +1,10 @@
 name:                hw-json-simd
 version:             0.1.0.0
-github:              "githubuser/hw-json-simd"
+github:              "haskell-works/hw-json-simd"
 license:             BSD3
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2018 Author name here"
+author:              "John Ky"
+maintainer:          "newhoggy@gmail.com"
+copyright:           "2018 John Ky"
 
 extra-source-files:
 - src/cbits/font_load.h
@@ -19,7 +19,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/hw-json-simd#readme>
+description:         Please see the README on GitHub at <https://github.com/haskell-works/hw-json-simd#readme>
 
 dependencies:
 - base >= 4.7 && < 5
