--- a/package.yaml
+++ b/package.yaml
@@ -9,6 +9,7 @@ copyright:           "2018 John Ky"
 extra-source-files:
 - cbits/simd.h
 - cbits/simd.c
+- cbits/simd-spliced.c
 - README.md
 - ChangeLog.md
 
@@ -25,6 +26,8 @@ dependencies:
 - base >= 4.7 && < 5
 - binary
 - bytestring
+- hw-prim
+- lens
 - parallel
 - mmap
 - vector
@@ -33,11 +36,12 @@ library:
   build-tools:
   - c2hs
   c-sources:
+  - cbits/simd-spliced.c
   - cbits/simd.c
   include-dirs:
   - cbits
   source-dirs: src
-  cc-options: -mssse3 -O3
+  cc-options: -mssse3 -O3 -mlzcnt -mbmi2 -mavx2
 
 executables:
   hw-json-simd-exe:
@@ -49,6 +53,7 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - hw-json-simd
+    - optparse-applicative
 
 tests:
   hw-json-simd-test:
