--- a/package.yaml
+++ b/package.yaml
@@ -22,6 +22,8 @@ extra-source-files:
 # common to point users to the README.md file.
 description:         Please see the README on GitHub at <https://github.com/haskell-works/hw-json-simd#readme>
 
+ghc-options: -Wall
+
 dependencies:
 - base >= 4.7 && < 5
 - binary
