--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,68 +1,3 @@
-defaults: &defaults
-  working_directory: ~/project
-  docker:
-    - image: quay.io/haskell_works/stack-build-cabal:18.04_2018-06-09
-
-  steps:
-    - checkout
-
-    - run:
-        name: Remove Cabal file
-        command: rm -f *.cabal
-
-    - run:
-        name: Copying scripts
-        command: |
-          mkdir -p ~/.local/bin
-          cp ./scripts/* ~/.local/bin
-
-    - run:
-        name: Query resolver & ghc version
-        command: |
-          resolver "$(resolver $LTS)" > resolver.version
-          ghc-version $(cat resolver.version) >  ghc.version
-
-    - run:
-        name: Find all sub-projects
-        command: projects-summary > projects.summary
-
-    ##### Building library
-    - restore_cache:
-        keys:
-          - stack--nAz6PsL--{{ checksum "ghc.version" }}--{{ .Environment.CACHE_VERSION }}--{{ checksum "projects.summary" }}--{{ checksum "package.yaml" }}--{{ checksum "stack.yaml" }}
-          - stack--nAz6PsL--{{ checksum "ghc.version" }}--{{ .Environment.CACHE_VERSION }}--{{ checksum "projects.summary" }}--{{ checksum "package.yaml" }}
-          - stack--nAz6PsL--{{ checksum "ghc.version" }}--{{ .Environment.CACHE_VERSION }}--{{ checksum "projects.summary" }}--
-          - stack--nAz6PsL--{{ checksum "ghc.version" }}--{{ .Environment.CACHE_VERSION }}--X
-
-    - run:
-        name: Stack setup
-        command: stack setup --resolver ${LTS}
-
-    - save_cache:
-        key:    stack--nAz6PsL--{{ checksum "ghc.version" }}--{{ .Environment.CACHE_VERSION }}--X
-        paths:  [~/.stack, ~/project/.stack-work]
-
-    - run:
-        name: Building dependencies
-        command: |
-          stack build --resolver ${LTS} --dependencies-only
-          stack build --resolver ${LTS} --dependencies-only --test --no-run-tests
-
-    - save_cache:
-        key:    stack--nAz6PsL--{{ checksum "ghc.version" }}--{{ .Environment.CACHE_VERSION }}--{{ checksum "projects.summary" }}--{{ checksum "package.yaml" }}
-        paths:  [~/.stack, ~/project/.stack-work]
-
-    - run: stack build --resolver ${LTS} --test --no-run-tests
-
-    - save_cache:
-        key:    stack--nAz6PsL--{{ checksum "ghc.version" }}--{{ .Environment.CACHE_VERSION }}--{{ checksum "projects.summary" }}--{{ checksum "package.yaml" }}--{{ checksum "stack.yaml" }}
-        paths:  [~/.stack, ~/project/.stack-work]
-
-    ##### Running tests
-    - run:
-        name: Running tests against latest on hackage
-        command: stack test --resolver ${LTS}
-
 cabalbuild: &cabalbuild
   working_directory: ~/project
 
@@ -93,12 +28,6 @@ cabalbuild: &cabalbuild
         name: Find all sub-projects
         command: ./scripts/projects-summary > projects.summary
 
-    - run:
-        name: Generate cabal file
-        command: |
-          rm -f *.cabal
-          hpack
-
     ##### Building library
     - restore_cache:
         keys:
@@ -109,7 +38,6 @@ cabalbuild: &cabalbuild
     - run:
         name: Building build dependencies
         command: |
-          ./scripts/mk-cabal-project > cabal.project
           cabal update
           cabal new-build --disable-tests --disable-benchmarks --project-file="cabal.project" --dep -j${CABAL_THREADS:-4} all
           cabal new-build --enable-tests  --enable-benchmarks  --project-file="cabal.project" --dep -j${CABAL_THREADS:-4} all
@@ -163,11 +91,6 @@ jobs:
       - image: quay.io/haskell_works/ghc-8.2.2
     <<: *cabalbuild
 
-  lts-12:
-    environment:
-      - LTS: "lts-12"
-    <<: *defaults
-
   checked-builds:
     docker:
       - image: quay.io/haskell_works/ghc-8.4.3
@@ -191,7 +114,6 @@ jobs:
 
       - deploy:
           command: |
-            hpack
             if [ "$CIRCLE_PROJECT_USERNAME" == "haskell-works" ]; then
               if [[ "$CIRCLE_BRANCH" == master ]]; then
                 when tag autotag
@@ -223,7 +145,6 @@ jobs:
 
       - deploy:
           command: |
-            hpack
             if [ "$CIRCLE_PROJECT_USERNAME" == "haskell-works" ]; then
               if [[ "$CIRCLE_BRANCH" == master ]]; then
                 when tag autotag
@@ -239,10 +160,11 @@ workflows:
       - ghc-8.6.1
       - ghc-8.4.3
       - ghc-8.2.2
-      - lts-12
       - checked-builds:
           requires:
-            - lts-12
+            - ghc-8.6.1
+            - ghc-8.4.3
+            - ghc-8.2.2
           filters:
             branches:
               only: master
