--- a/hw-json-simd.cabal
+++ b/hw-json-simd.cabal
@@ -90,7 +90,7 @@ library
       , transformers >=0.4 && <0.6
   default-language: Haskell2010
 
-executable hw-json-simd-exe
+executable hw-json-simd
   main-is: Main.hs
   other-modules:
       App.Commands
