Rely on compiler provided flags

--- a/cbits/Makefile
+++ b/cbits/Makefile
@@ -2,10 +2,10 @@ SRC_FILES := $(wildcard *.c)
 OBJ_FILES=$(patsubst %.c, %.o, $(SRC_FILES))
 
 %.s : %.c
-	gcc -O2 -mavx2 -mlzcnt -mbmi2 -S -Wall -DAVX2_ENABLED $<
+	gcc -O2 -mavx2 -mlzcnt -mbmi2 -S -Wall $<
 
 %.o : %.c
-	gcc -O2 -mavx2 -mlzcnt -mbmi2 -c -Wall -DAVX2_ENABLED $<
+	gcc -O2 -mavx2 -mlzcnt -mbmi2 -c -Wall $<
 
 a.out : $(OBJ_FILES)
 	gcc -o a.out $(OBJ_FILES)
