--- a/hw-json-simd.cabal
+++ b/hw-json-simd.cabal
@@ -1,14 +1,16 @@
-cabal-version: 1.12
+cabal-version:  2.2
 
 name:           hw-json-simd
 version:        0.1.0.0
+synopsis:       SIMD-based JSON semi-indexer
 description:    Please see the README on GitHub at <https://github.com/haskell-works/hw-json-simd#readme>
+category:       Data
 homepage:       https://github.com/haskell-works/hw-json-simd#readme
 bug-reports:    https://github.com/haskell-works/hw-json-simd/issues
 author:         John Ky
 maintainer:     newhoggy@gmail.com
-copyright:      2018 John Ky
-license:        BSD3
+copyright:      2018 - 2019 John Ky
+license:        BSD-3-Clause
 license-file:   LICENSE
 build-type:     Simple
 extra-source-files:
