--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,11 +70,11 @@ cabalbuild: &cabalbuild
 
 version: 2.0
 jobs:
-  ghc-8.6.1:
+  ghc-8.6.3:
     environment:
-      - GHC: "ghc8.6.1"
+      - GHC: "ghc8.6.3"
     docker:
-      - image: quay.io/haskell_works/ghc-8.6.1
+      - image: quay.io/haskell_works/ghc-8.6.3
     <<: *cabalbuild
 
   ghc-8.4.3:
@@ -89,6 +89,13 @@ jobs:
       - GHC: "ghc8.2.2"
     docker:
       - image: quay.io/haskell_works/ghc-8.2.2
+    <<: *cabalbuild
+
+  ghc-7.10.3:
+    environment:
+      - GHC: "ghc7.10.3"
+    docker:
+      - image: quay.io/haskell_works/ghc-7.10.3
     <<: *cabalbuild
 
   checked-builds:
@@ -157,14 +164,16 @@ workflows:
   version: 2
   multiple-ghcs:
     jobs:
-      - ghc-8.6.1
+      - ghc-8.6.3
       - ghc-8.4.3
       - ghc-8.2.2
+      - ghc-7.10.3
       - checked-builds:
           requires:
-            - ghc-8.6.1
+            - ghc-8.6.3
             - ghc-8.4.3
             - ghc-8.2.2
+            - ghc-7.10.3
           filters:
             branches:
               only: master
