--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,10 +4,14 @@ orbs:
   haskell: haskell-works/haskell-build@1.6.2
   github: haskell-works/github-release@1.2.1
   hackage: haskell-works/hackage@1.0.0
+  display: haskell-works/display@1.0.1
 
 workflows:
   multiple-ghc-build:
     jobs:
+      - display/display-cpu-info:
+          name: Display
+
       - haskell/build:
           name: GHC 8.2.2
           executor: haskell/ghc-8_2_2
