--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  haskell: haskell-works/haskell-build@1.6.2
+  haskell: haskell-works/haskell-build@dev:jky
   github: haskell-works/github-release@1.2.1
   hackage: haskell-works/hackage@1.0.0
   display: haskell-works/display@1.0.1
