--- a/hw-json-simd.cabal
+++ b/hw-json-simd.cabal
@@ -9,7 +9,7 @@ homepage:       https://github.com/haskell-works/hw-json-simd#readme
 bug-reports:    https://github.com/haskell-works/hw-json-simd/issues
 author:         John Ky
 maintainer:     newhoggy@gmail.com
-copyright:      2018 - 2019 John Ky
+copyright:      2018-2019 John Ky
 license:        BSD-3-Clause
 license-file:   LICENSE
 build-type:     Simple
