--- a/hw-json-simd.cabal
+++ b/hw-json-simd.cabal
@@ -1,30 +1,29 @@
 cabal-version:  2.2
 
-name:           hw-json-simd
-version:        0.1.0.3
-synopsis:       SIMD-based JSON semi-indexer
-description:    Please see the README on GitHub at <https://github.com/haskell-works/hw-json-simd#readme>
-category:       Data
-homepage:       https://github.com/haskell-works/hw-json-simd#readme
-bug-reports:    https://github.com/haskell-works/hw-json-simd/issues
-author:         John Ky
-maintainer:     newhoggy@gmail.com
-copyright:      2018-2019 John Ky
-license:        BSD-3-Clause
-license-file:   LICENSE
-build-type:     Simple
-tested-with:    GHC == 8.6.3, GHC == 8.4.4, GHC == 8.2.2
-extra-source-files:
-    cbits/debug.h
-    cbits/simd.h
-    cbits/intrinsics.h
-    cbits/simd.c
-    cbits/simd-spliced.c
-    cbits/simd-state.c
-    cbits/simd-phi-table-32.c
-    cbits/simd-transition-table-32.c
-    README.md
-    ChangeLog.md
+name:                   hw-json-simd
+version:                0.1.0.3
+synopsis:               SIMD-based JSON semi-indexer
+description:            Please see the README on GitHub at <https://github.com/haskell-works/hw-json-simd#readme>
+category:               Data
+homepage:               https://github.com/haskell-works/hw-json-simd#readme
+bug-reports:            https://github.com/haskell-works/hw-json-simd/issues
+author:                 John Ky
+maintainer:             newhoggy@gmail.com
+copyright:              2018-2019 John Ky
+license:                BSD-3-Clause
+license-file:           LICENSE
+build-type:             Simple
+tested-with:            GHC == 8.8.1, GHC == 8.6.3, GHC == 8.4.4, GHC == 8.2.2
+extra-source-files:     cbits/debug.h
+                        cbits/simd.h
+                        cbits/intrinsics.h
+                        cbits/simd.c
+                        cbits/simd-spliced.c
+                        cbits/simd-state.c
+                        cbits/simd-phi-table-32.c
+                        cbits/simd-transition-table-32.c
+                        README.md
+                        ChangeLog.md
 
 source-repository head
   type: git
@@ -56,77 +55,74 @@ common semigroups     { if (!impl(ghc >= 8.0.1))  { build-depends: { semigroups 
 common transformers   { if (!impl(ghc >= 8.0.1))  { build-depends: { transformers >= 0.4    && < 0.6  } } }
 
 common config
-  ghc-options: -Wall
-  default-language: Haskell2010
+  ghc-options:          -Wall
+  default-language:     Haskell2010
   if impl(ghc >= 8.0.1)
-    ghc-options: -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
+    ghc-options:        -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
   if flag(sse42)
-    ghc-options: -msse4.2
-    cc-options: -msse4.2
+    ghc-options:        -msse4.2
+    cc-options:         -msse4.2
   if flag(bmi2)
-    cc-options: -mbmi2
+    cc-options:         -mbmi2
     if impl(ghc >= 8.4.1)
-      ghc-options: -mbmi2
+      ghc-options:      -mbmi2
   if flag(avx2)
-    cc-options: -mavx2
+    cc-options:         -mavx2
 
 library
-  import:   base, config
-          , bytestring
-          , hw-prim
-          , lens
-          , vector
+  import:               base, config
+                      , bytestring
+                      , hw-prim
+                      , lens
+                      , vector
   autogen-modules:      Paths_hw_json_simd
   other-modules:        Paths_hw_json_simd
   hs-source-dirs:       src
   cc-options:           -mssse3 -mlzcnt -mbmi2 -mavx2
   include-dirs:         cbits
   build-tool-depends:   c2hs:c2hs
-  exposed-modules:
-      HaskellWorks.Data.Json.Simd.Capabilities
-      HaskellWorks.Data.Json.Simd.Index.Simple
-      HaskellWorks.Data.Json.Simd.Index.Standard
-      HaskellWorks.Data.Json.Simd.Internal.Foreign
-      HaskellWorks.Data.Json.Simd.Internal.Index.Simple
-      HaskellWorks.Data.Json.Simd.Internal.Index.Standard
-      HaskellWorks.Data.Json.Simd.Internal.List
-  c-sources:
-      cbits/debug.c
-      cbits/simd.c
-      cbits/simd-spliced.c
-      cbits/simd-state.c
-      cbits/simd-phi-table-32.c
-      cbits/simd-transition-table-32.c
+  exposed-modules:      HaskellWorks.Data.Json.Simd.Capabilities
+                        HaskellWorks.Data.Json.Simd.Index.Simple
+                        HaskellWorks.Data.Json.Simd.Index.Standard
+                        HaskellWorks.Data.Json.Simd.Internal.Foreign
+                        HaskellWorks.Data.Json.Simd.Internal.Index.Simple
+                        HaskellWorks.Data.Json.Simd.Internal.Index.Standard
+                        HaskellWorks.Data.Json.Simd.Internal.List
+  c-sources:            cbits/debug.c
+                        cbits/simd.c
+                        cbits/simd-spliced.c
+                        cbits/simd-state.c
+                        cbits/simd-phi-table-32.c
+                        cbits/simd-transition-table-32.c
   
 executable hw-json-simd
-  import:   base, config
-          , bytestring
-          , hw-prim
-          , lens
-          , optparse-applicative
-          , semigroups
-          , vector
+  import:               base, config
+                      , bytestring
+                      , hw-prim
+                      , lens
+                      , optparse-applicative
+                      , semigroups
+                      , vector
   main-is:              Main.hs
   autogen-modules:      Paths_hw_json_simd
   hs-source-dirs:       app
   build-depends:        hw-json-simd
   ghc-options:          -threaded -rtsopts -with-rtsopts=-N
-  other-modules:
-      App.Commands
-      App.Commands.Capabilities
-      App.Commands.CreateIndex
-      App.Commands.Types
-      App.Lens
-      Paths_hw_json_simd
+  other-modules:        App.Commands
+                        App.Commands.Capabilities
+                        App.Commands.CreateIndex
+                        App.Commands.Types
+                        App.Lens
+                        Paths_hw_json_simd
 
 test-suite hw-json-simd-test
-  import:   base, config
-          , bytestring
-          , hw-prim
-          , lens
-          , semigroups
-          , transformers
-          , vector
+  import:               base, config
+                      , bytestring
+                      , hw-prim
+                      , lens
+                      , semigroups
+                      , transformers
+                      , vector
   type:                 exitcode-stdio-1.0
   main-is:              Spec.hs
   autogen-modules:      Paths_hw_json_simd
