--- a/hw-json-simd.cabal
+++ b/hw-json-simd.cabal
@@ -136,7 +136,7 @@ test-suite doctest
                       , hw-json-simd
   default-language:     Haskell2010
   type:                 exitcode-stdio-1.0
-  ghc-options:          -threaded
+  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
   main-is:              DoctestDriver.hs
   HS-Source-Dirs:       doctest
   build-tool-depends:   doctest-discover:doctest-discover
